--- a/src/component/Item.css
+++ b/src/component/Item.css
@@ -2,4 +2,12 @@
     text-align: center;
     color: black;
     background-color: aqua;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+    margin: 10px 100px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    
 }
